# factor

./: .editorconfig  .eslintignore  .gitignore  .prettierignore  .prettierrc.yaml  .yarnrc.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE-NOTES.md  contributing.md  dev-app-update.yaml  electron-builder.yaml  electron.vite.config.ts  eslint.config.js  eslint.config.mjs  factor.code-workspace  index-demo.html  index.html  package.json  roadmap  roadmap.md  tsconfig.json  tsconfig.node.json  tsconfig.web.json  vite.config.ts  vite.demo.config.ts  vite.dev.config.ts  vite.prod.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  demo.yml
resources/: README.md  customers_db.ddb  defaultSettings.json  includeFiles.mjs  manifest.json
resources/data/: customer.backup.json  customer.sample  customers.csv  customers_db.ddb  genData.cli.js
resources/images/screenshots/: SCREENSHOT.md
scripts/: README.md  genData.cli.js  includeFiles.mjs  preDemoBundle.js  preDemoBundle.mjs  preTauriBuild.js  preTauriBuild.mjs  preTauriDev.mjs  upgradeVersion.js
src/: App.css  App.tsx  README.md  base.css  index.demo.html  index.dev.html  index.prod.html  main.tsx  manifest.json  scrollbarColor-dark.css  scrollbarColor-light.css  scrollbarColor-lightdark.css  theme-dark.css  theme-light.css  theme-lightdark.css
src-tauri/: Cargo.toml  README.md  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: default.json  main.json
src-tauri/conf/: tauri.dev.conf.json  tauri.prod.conf.json
src-tauri/icons/: LICENSE  icon.icns
src-tauri/src/: lib.rs  main.rs
src/comps/: Comps.ts
src/comps/CheckBox/: CheckBox.css  CheckBox.tsx
src/comps/ContextMenu/: ContextMenu.css  ContextMenu.tsx
src/comps/SideBar/: LowerButton.tsx  RouterButton.tsx  SideBar.css  SideBar.tsx
src/comps/Table/: ColumnCheckBox.tsx  ColumnOrderer.tsx  ColumnTitle.tsx  NestedTableCell.tsx  README.md  ResizeElement.tsx  RowItems.tsx  Table.css  Table.tsx  TableBody.tsx  TableBodyDisplay.tsx  TableCells.tsx  TableFoot.tsx  TableFootDisplay.tsx  TableHead.tsx  TableHeadDisplay.tsx  TableRows.tsx
src/comps/Versions/: Versions.css  Versions.tsx
src/main/: index.ts
src/pages/: Pages.tsx
src/pages/Customers/: CustomerTableNames.tsx  Customers.tsx
src/pages/Deliveries/: Deliveries.tsx
src/pages/ExportPage/: ExportPage.css  ExportPage.tsx
src/pages/Help/: Help.css  Help.tsx  HelpTexts.tsx
src/pages/Home/: Home.css  HomeDemo.tsx
src/pages/Invoices/: Invoices.tsx
src/pages/Returnees/: Returnees.tsx
src/pages/Settings/: Settings.css  Settings.tsx
src/pages/Templates/: Templates.tsx
src/pages/Upload/: ColRemover.tsx  (+4 more)
src/preload/: index.ts
src/renderer/: index.html
src/types/: types.d.ts
src/util/: util.ts
src/worker/: export.worker.ts  import.worker.ts  table.worker.ts
(+137 files in other folders)
