[package]
name = "factor"
version = "2.1.2"
description = "An invoicing application built with TypeScript:React on top of IndexDB packaged with Tauri"
authors = ["39zde"]
license = "Apache-2.0"
repository = "https://github.com/39zde/factor"
edition = "2021"
rust-version = "1.81"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc.12", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-rc.15", features = [] }
tauri-plugin-fs = { version = "2.0.0-rc.5", features = [] }
tauri-plugin-window-state = { version = "2.0.0-rc.5", features = [] }
tauri-plugin-notification = { version = "2.0.0-rc.5", features = [] }
tauri-plugin-shell = { version = "2.0.0-rc.3", features = [] }
