[package]
name = "factor"
version = "2.1.2"
description = "An invoicing application built with TypeScript:React on top of IndexDB packaged with Tauri"
authors = ["39zde"]
license = "Apache-2.0"
repository = "https://github.com/39zde/factor"
edition = "2021"
#rust-version = "1.81"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "factor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = [] }
tauri-plugin-shell = "2.0.0-rc"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2.0.0-rc"
tauri-plugin-notification = "2.0.0-rc"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-cli = "2.0.0-rc"
tauri-plugin-window-state = "2.0.0-rc"

